--- a/index.html
+++ b/index.html
@@ -161,6 +161,12 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li> <b> [2022-01]</b> Our project on
+                    "Scalable & Accountable Privacy-Preserving
+                    Blockchain with Enhanced Security" has been
+                    awarded by Australian Research Council as a
+                    Discovery Project <b>(ARC DP)</b>.
+                          </li>
                           <li> <b> [2021-12]</b> Our work "A
                             Bytecode-based Approach for Smart Contract
                             Classification" has been accepted by
@@ -980,54 +986,62 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
               <li><b>Selected Recent Grant: </b>
                 <ul type="circle">
                   <li>
+                    (Co-CI-- 4CIs in total). Scalable & Accountable
+                    Privacy-Preserving Blockchain with Enhanced
+                    Security. $330,000, Australian Research Council
+                    Discovery Project <b>(ARC DP)</b>, 2022-2024.
+                  </li>
+                  <li>
                     (Sole CI). A Scalable and Adaptive-Resilient
-                    Blockchain, AU$563,000, ARC DECRA, 2021-2023.
+                    Blockchain, $563,000, Australian Research Council
+                    Discovery Early Career Researcher Award <b>(ARC
+                    DECRA)</b>, 2021-2023.
                   </li>
                   <li>(Co-CI-- 4 CIs in total). De-tangling the
                   blockchain: Solutions and barriers in
                   AgriFutures-levied small and emerging industries,
-                  AU$184,625 from AgriFutures
+                  $184,625 from AgriFutures
                   Australia. 2021-2022.</li>
                   <li>
                     (Co-CI-- 2 CIs in total). To Develop a Sustainable
-                    and Green Blockchain Consensus, AU$500,625,
+                    and Green Blockchain Consensus, $500,625,
                     contract research. 2021-2022.
                   </li>
                   <li>
                     (Co-CI-- 3 CIs in total). A trustworthy
-                    blockchain-based credentialing system, AU$50,000,
+                    blockchain-based credentialing system, $50,000,
                     contract research. 2021-2022.
                   </li>
                   <li>
                     (Co-CI-- 3 CIs in total). Exploring
                     blockchain-based approach for auditability in
-                    pharmaceutical supply chain, AU$75,000, contract
+                    pharmaceutical supply chain, $75,000, contract
                     research. 2021-2022.
                   </li>
 	          <li> (Co-CI -- 34 CIs in total). Reliable Affordable
-                  Clean Energy for 2030, AU$349,000,000, the 21st
+                  Clean Energy for 2030, $349,000,000, the 21st
                   round of the Cooperative Research Centre (CRC)
                   program. 2020-2031.
                   </li>
                   <li>
                     (Sole CI). Interoperability Across Distributed
-                    Ledgers, AU$57,397, gift research funding from
+                    Ledgers, $57,397, gift research funding from
                     IBM. 2020-2021.
                   </li>
                     <li>
                       (Sole CI). Design space and pitfalls: blockchain
-                      interoperability, AU$298,371, contract
+                      interoperability, $298,371, contract
                       research. 2020-2021.
                     </li>
                   <li>
                     (Co-CI-- 3 CIs in total). A consensus mechanism
                     for blockchain in the Internet of Things,
-                    AU$131,586 from Data61, 11.2019-11.2022.
+                    $131,586 from Data61, 11.2019-11.2022.
                   </li>
                   <li>
                     (Co-CI -- 3 CIs in total). Next-generation
                     blockchains: decentralised data structures
-                    suitable for IoT devices, AU$131,586 from Data61,
+                    suitable for IoT devices, $131,586 from Data61,
                     10.2019-10.2022.
                   </li>
                   <!-- <li> -->
