--- a/index.html
+++ b/index.html
@@ -167,6 +167,11 @@ http://www.templatemo.com/tm-395-urbanic
                     awarded by Australian Research Council as a
                     Discovery Project <b>(ARC DP)</b>.
                           </li>
+                          <li> <b> [2022-01]</b> Our work on "DAMYSUS:
+                          Streamlined BFT Consensus Leveraging Trusted
+                          Components” has been accepted
+                          by <b>EuroSys’22</b> conference"! </li>
+
                           <li> <b> [2021-12]</b> Our work "A
                             Bytecode-based Approach for Smart Contract
                             Classification" has been accepted by
@@ -653,6 +658,14 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
 
 	                    <li><b>Conference:</b><br>
                               <ol type="1" start = "11">
+                                <li>Jeremie Decouchant, David Kozhaya,
+                                Vincent Rahli, and Jiangshan
+                                Yu. (Alphabetical
+                                Authorship) <br><b>"DAMYSUS:
+                                Streamlined BFT Consensus Leveraging
+                                Trusted
+                                Components"</b>, <br><i><b>EuroSys</b></i>,
+                                2022.</li>
                                 <li> Chaochen Shi, Yong Xiang,
                                 Jiangshan Yu, Longxiang Gao, Keshav
                                 Sood, and Robin Doss. <br> <b>"A
@@ -696,10 +709,11 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                   Irvin, Dileban Karunamoorthy,
                                   Vinayaka Pandit, Venkatraman
                                   Ramakrishna, Jiangshan
-                                  Yu. <br> <b>"Verifiable Observation of
-                                    Permissioned Ledgers"</b>, <br><i>IEEE
-                                  International Conference on
-                                  Blockchain and Cryptocurrency
+                                  Yu. (Alphabetical
+                                Authorship)<br> <b> "Verifiable Observation of Permissioned Ledgers"
+                                  </b>, <br><i>IEEE
+                                    International Conference on
+                                    Blockchain and Cryptocurrency
                                     (<b>ICBC</b>), </i>2021.
                                 </li>
                                 <li>Joao Otavio Chervinski, Diego
