--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ http://www.templatemo.com/tm-395-urbanic
                           <li> <b> [2022-01]</b> Our work on "DAMYSUS:
                           Streamlined BFT Consensus Leveraging Trusted
                           Components” has been accepted
-                          by <b>EuroSys’22</b> conference"! </li>
+                          by <b>EuroSys’22</b>! </li>
                           <li> <b> [2022-01]</b> Our project on
                     "Scalable & Accountable Privacy-Preserving
                     Blockchain with Enhanced Security" has been
