--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@ http://www.templatemo.com/tm-395-urbanic
                       </div>
                       <p> <font size="4"> <b>Dr. Jiangshan Yu (于江山)</b></p>
                       <p><b>Senior Lecturer (<a href="https://en.wikipedia.org/wiki/Senior_lecturer">equiv.</a> Associate Professor in US)<br>
-                            ARC DECRA Fellow <br><br>
+                          ARC DECRA Fellow <br>
+                          IFIP Working Group 10.4<br>
+                          <br>
                           Monash Blockchain Technology Centre<br>
                           Department of Software Systems and Cybersecurity<br>
                           Monash University, Australia.</b></font>
@@ -161,6 +163,14 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li>
+                            <b> [2022-01]</b> I'm thrilled and honored
+                            to be elected as a member of the
+                            privileged <b>IFIP 10.4 Working Group</b>
+                            on Dependable Computing and Fault
+                            Tolerance!
+                          </li>
+
                           <li> <b> [2022-01]</b> Our work on "DAMYSUS:
                           Streamlined BFT Consensus Leveraging Trusted
                           Components” has been accepted
