--- a/index.html
+++ b/index.html
@@ -1262,6 +1262,10 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                               <li>Remote Referee, <b>European Research Council (ERC)</b>, 2021</li>
                           </ul>
                             <br>
+	                    <li><b>Journal editorship:</b></li>
+	                      <ul type="circle">
+                                <li>Associate Editor, International Journal of Blockchain Applications and Secure Computing <b>(IJBASC)</b></li>
+                            </ul><br>
 
                             <li><b>Conference (Co-)Chair</b></li>
                             <ul type="circle">
