--- a/index.html
+++ b/index.html
@@ -164,6 +164,12 @@ http://www.templatemo.com/tm-395-urbanic
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
                           <li>
+
+                          <li> <b> [2022-02]</b> Our work on
+                          "AuxChannel: Enabling Efficient
+                          Bi-Directional Channel for Scriptless
+                          Blockchains” has been accepted
+                          by <b>AsiaCCS’22</b>! Congrats Zhimei!</li>
                             <b> [2022-01]</b> I'm thrilled and honored
                             to be elected as a member of the
                             privileged <b>IFIP 10.4 Working Group</b>
@@ -675,7 +681,15 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 Streamlined BFT Consensus Leveraging
                                 Trusted
                                 Components"</b>, <br><i><b>EuroSys</b></i>,
-                                2022.</li>
+                                  2022.</li>
+	                        <li>Zhimei Sui, Joseph K. Liu,
+                                    Jiangshan Yu, Man Ho Au, Jia
+                                    Liu<br> <b>"AuxChannel: Enabling
+                                    Efficient Bi-Directional Channel
+                                    for Scriptless
+                                    Blockchains"</b><br><i><b> AsiaCCS
+                                  </b></i>,
+                                    2022.</li>
                                 <li> Chaochen Shi, Yong Xiang,
                                 Jiangshan Yu, Longxiang Gao, Keshav
                                 Sood, and Robin Doss. <br> <b>"A
