funding from RACEfor2030

--- a/index.html
+++ b/index.html
@@ -1021,13 +1021,20 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
 	    <ul type="disc"; style="margin-bottom:
                                     6px">
               
-              <li><b>Selected Recent Grant: </b>
+              <li><b>Selected Recent Grant: </b><br>
+                Chief Investigator (CI) in Australia is equvlent to Principle Investigator (PI) in Europe/US.
                 <ul type="circle">
                   <li>
                     (Co-CI-- 4CIs in total). Scalable & Accountable
                     Privacy-Preserving Blockchain with Enhanced
                     Security. $330,000, Australian Research Council
                     Discovery Project <b>(ARC DP)</b>, 2022-2024.
+                  </li>
+                  <li>
+                    (Co-CI-- 2 CIs in total). Identification, Key
+                    Management and Trust for Inverters for Distributed
+                    Energy Resources, $149, 000 from RACE for 2030
+                    CRC, 2022.
                   </li>
                   <li>
                     (Sole CI). A Scalable and Adaptive-Resilient
@@ -1050,6 +1057,14 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                     blockchain-based credentialing system, $50,000,
                     contract research. 2021-2022.
                   </li>
+
+                  <li>
+                    (Co-CI-- 12 CIs in total). Automated tracking of
+                    construction materials for improved supply chain
+                    logistics and provenance – Phase 1 Scoping Study,
+                    $175, 000 from Building 4.0 CRC. 2021-2022.
+                  </li>
+
                   <li>
                     (Co-CI-- 3 CIs in total). Exploring
                     blockchain-based approach for auditability in
