--- a/index.html
+++ b/index.html
@@ -677,17 +677,17 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 <li>Jeremie Decouchant, David Kozhaya,
                                 Vincent Rahli, and Jiangshan
                                 Yu. (Alphabetical
-                                Authorship) <br><b>"DAMYSUS:
+                                Authorship) <br><b><a href="https://dl.acm.org/doi/pdf/10.1145/3492321.3519568">"DAMYSUS:
                                 Streamlined BFT Consensus Leveraging
                                 Trusted
-                                Components"</b>, <br><i><b>EuroSys</b></i>,
+                                      Components"</a></b>, <br><i><b>EuroSys</b></i>,
                                   2022.</li>
 	                        <li>Zhimei Sui, Joseph K. Liu,
                                     Jiangshan Yu, Man Ho Au, Jia
-                                    Liu<br> <b>"AuxChannel: Enabling
+                                    Liu<br> <b><a href="https://eprint.iacr.org/2022/117.pdf">"AuxChannel: Enabling
                                     Efficient Bi-Directional Channel
                                     for Scriptless
-                                    Blockchains"</b><br><i><b> AsiaCCS
+                                    Blockchains"</a></b><br><i><b> AsiaCCS
                                   </b></i>,
                                     2022.</li>
                                 <li> Chaochen Shi, Yong Xiang,
