--- a/index.html
+++ b/index.html
@@ -164,7 +164,10 @@ http://www.templatemo.com/tm-395-urbanic
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
                           <li>
-
+                          <li> <b> [2022-04]</b> Our work on "MoNet:
+                          Making Monero as Fast as Lightning” has been
+                          accepted by <b>ICDCS’22</b>! Congrats
+                          Zhimei!</li>
                           <li> <b> [2022-02]</b> Our work on
                           "AuxChannel: Enabling Efficient
                           Bi-Directional Channel for Scriptless
@@ -674,6 +677,12 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
 
 	                    <li><b>Conference:</b><br>
                               <ol type="1" start = "11">
+                                <li>
+                                  Zhimei Sui, Joseph Liu, Jiangshan Yu
+                                  and Xianrui Qin. <br><b>MoNet: Making Monero
+                                    as Fast as Lightning</b>,<br><i><b>ICDCS</b></i>,
+                                  2022.
+                                </li>
                                 <li>Jeremie Decouchant, David Kozhaya,
                                 Vincent Rahli, and Jiangshan
                                 Yu. (Alphabetical
