--- a/index.html
+++ b/index.html
@@ -1338,7 +1338,8 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                               <li>
                                 The 5th International Symposium on Foundations and Applications of Blockchain <b>(FAB)</b>
                               </li>
-
+                              <li>The 18th International Conference on Mobility, Sensing and Networking <b>(MSN)</b></li>
+                              <li>The 4th International Congress on Blockchain and Applications <b>(BLOCKCHAIN)</b></li>
                               <!-- <li>IEEE ICBC Crosschain Workshop <b>(CROSS)</b></li> -->
                               <!-- <li>Australasian Symposium on Parallel and Distributed Computing <b>(AusPDC)</b></li> -->
                             </ul>
