--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@ http://www.templatemo.com/tm-395-urbanic
                                alt="icon"> <br><br><br><br>
                           <div style="width: 310px; height:
                                       230px;">
-                            <!-- <b>Prospective PhD Students:</b><br><br> -->
-                            <!-- <font style="color:red"><b>Two fully funded PhD positions are available!</b></font> <br> -->
-                            <!-- My life would be happier if I found very -->
-                            <!-- good PhD students to work with. If this is -->
-                            <!-- you, do apply! <br> <a href="doc/phd_position.html">More info.</a> -->
+                            <b>Postdoc positions:</b><br><br>
+                            <font style="color:red"><b>Two postdoc positions are available!</b></font> <br>
+                            My life would be happier if I found very
+                            good researchers to work with. If this is
+                            you, do apply! <br> <a href="doc/postdoc.html">More info.</a>
 
-                            <!-- <br><br> -->
+                            <br><br>
 
                             <!-- <b>A list of projects for Honours and/or Master Thesis is <a href="doc/projects.pdf">here</a>.</b><br><br> -->
                             <b>
