--- a/index.html
+++ b/index.html
@@ -164,6 +164,11 @@ http://www.templatemo.com/tm-395-urbanic
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
                           <li>
+                          <li> <b> [2022-07]</b> Our work on
+                          "Analysing and Improving Shard Allocation
+                          Protocols for Sharded Blockchains” has been
+                          accepted by <b>AFT’22</b>! Congrats
+                          Runchao!</li>
                           <li> <b> [2022-06]</b> I'm delighted to
                             serve as a PC member
                             for <b>DSN'23</b>! </li>
@@ -599,7 +604,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                   An Evolutionary Game
                                   Analysis. </b><br> <i>IEEE
                                   Transactions on Network Science and
-                                  Engineering (<b> IEEE TNSE</b>).</i>2021.
+                                  Engineering (<b>IEEE TNSE</b>).</i>2021.
                                 </li>
                                 <li> Lingjuan Lyu, Jiangshan Yu,
                                 Karthik Nandakumar, Yitong Li, Xingjun
@@ -682,9 +687,11 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                               <ol type="1" start = "11">
                                 <li>
                                   Zhimei Sui, Joseph Liu, Jiangshan Yu
-                                  and Xianrui Qin. <br><b>MoNet: Making Monero
-                                    as Fast as Lightning</b>,<br><i><b>ICDCS</b></i>,
-                                  2022.
+                                  and Xianrui Qin. <br><b>MoNet:
+                                  Making Monero as Fast as
+                                  Lightning</b>,<br><i>The 42nd IEEE
+                                  International Conference on
+                                  Distributed Computing Systems (<b>ICDCS</b>)</i>, 2022.
                                 </li>
                                 <li>Jeremie Decouchant, David Kozhaya,
                                 Vincent Rahli, and Jiangshan
@@ -692,16 +699,24 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 Authorship) <br><b><a href="https://dl.acm.org/doi/pdf/10.1145/3492321.3519568">"DAMYSUS:
                                 Streamlined BFT Consensus Leveraging
                                 Trusted
-                                      Components"</a></b>, <br><i><b>EuroSys</b></i>,
+                                      Components"</a></b>, <br><i>The 17th European Conference on Computer Systems (<b>EuroSys</b>)</i>,
                                   2022.</li>
 	                        <li>Zhimei Sui, Joseph K. Liu,
                                     Jiangshan Yu, Man Ho Au, Jia
                                     Liu<br> <b><a href="https://eprint.iacr.org/2022/117.pdf">"AuxChannel: Enabling
                                     Efficient Bi-Directional Channel
                                     for Scriptless
-                                    Blockchains"</a></b><br><i><b> AsiaCCS
-                                  </b></i>,
-                                    2022.</li>
+                                    Blockchains"</a></b><br><i>The 17th ACM ASIA Conference on Computer and Communications Security (<b>AsiaCCS</b>)</i>,
+                                  2022.</li>
+
+	                        <li>Runchao Han, Jiangshan Yu, Ren
+                                  Zhang <br>
+                                  <b>
+                                    <a href="https://eprint.iacr.org/2020/943.pdf">"Analysing
+                                    and Improving Shard Allocation
+                                    Protocols for Sharded
+                                    Blockchains"</a></b><br>
+                                  <i>The 4th ACM Conference on Advances in Financial Technologies (<b>AFT</b>)</i>, 2022.</li>
                                 <li> Chaochen Shi, Yong Xiang,
                                 Jiangshan Yu, Longxiang Gao, Keshav
                                 Sood, and Robin Doss. <br> <b>"A
