--- a/index.html
+++ b/index.html
@@ -1371,6 +1371,11 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                               <li>The 4th International Congress on Blockchain and Applications <b>(BLOCKCHAIN)</b></li>
                               <!-- <li>IEEE ICBC Crosschain Workshop <b>(CROSS)</b></li> -->
                               <!-- <li>Australasian Symposium on Parallel and Distributed Computing <b>(AusPDC)</b></li> -->
+                              <li>
+                                The 21th IEEE International Conference
+                                on Trust, Security and Privacy in
+                                Computing and
+                                Communications <b>(TrustCom)</b> </li>
                             </ul>
                             <b>2021</b>
                             <ul type="circle">
