--- a/index.html
+++ b/index.html
@@ -1372,7 +1372,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                               <!-- <li>IEEE ICBC Crosschain Workshop <b>(CROSS)</b></li> -->
                               <!-- <li>Australasian Symposium on Parallel and Distributed Computing <b>(AusPDC)</b></li> -->
                               <li>
-                                The 21th IEEE International Conference
+                                The 21st IEEE International Conference
                                 on Trust, Security and Privacy in
                                 Computing and
                                 Communications <b>(TrustCom)</b> </li>
