--- a/index.html
+++ b/index.html
@@ -1276,6 +1276,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
 	    <li>FIT5214 Blockchain, Monash University, 2019. (Designer and Lecturer)</li>
             <li>FIT5214 Blockchain, Monash University, 2020. (Chief Examiner and Lecturer)</li>
             <li>FIT5214 Blockchain, Monash University, 2021. (Chief Examiner)</li>
+            <li>FIT5214 Blockchain, Monash University, 2022. (Chief Examiner)</li>
             <li>
               Applications of Blockchain (FutureLearn Online
               Microcredential), Monash University, 2021. (Chief
