--- a/index.html
+++ b/index.html
@@ -164,6 +164,14 @@ http://www.templatemo.com/tm-395-urbanic
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
                           <li>
+                            <b>[2022-08]</b>  Our Monash Blockchain Technology Centre
+                            received US$6 Million award
+                            for <a href="https://www.algorand.foundation/ace">
+                            Algorand Center of Excellence</a>, where I
+                            will lead research activities to work with
+                            our excellent partners from 9 Universities
+                            and research organisations!
+                          </li>
                           <li> <b> [2022-07]</b> Our work on
                           "Analysing and Improving Shard Allocation
                           Protocols for Sharded Blockchains” has been
@@ -1049,81 +1057,137 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                     6px">
               
               <li><b>Selected Recent Grant: </b><br>
-                Chief Investigator (CI) in Australia is equvlent to Principle Investigator (PI) in Europe/US.
+                Chief Investigator (CI) in Australia is also known as Principle Investigator (PI) in Europe/US.
                 <ul type="circle">
                   <li>
-                    (Co-CI-- 4CIs in total). Scalable & Accountable
-                    Privacy-Preserving Blockchain with Enhanced
-                    Security. $330,000, Australian Research Council
-                    Discovery Project <b>(ARC DP)</b>, 2022-2024.
-                  </li>
-                  <li>
-                    (Co-CI-- 2 CIs in total). Identification, Key
-                    Management and Trust for Inverters for Distributed
-                    Energy Resources, $149, 000 from RACE for 2030
-                    CRC, 2022.
-                  </li>
-                  <li>
-                    (Sole CI). A Scalable and Adaptive-Resilient
-                    Blockchain, $563,000, Australian Research Council
-                    Discovery Early Career Researcher Award <b>(ARC
-                    DECRA)</b>, 2021-2023.
-                  </li>
-                  <li>(Co-CI-- 4 CIs in total). De-tangling the
-                  blockchain: Solutions and barriers in
-                  AgriFutures-levied small and emerging industries,
-                  $184,625 from AgriFutures
-                  Australia. 2021-2022.</li>
-                  <li>
-                    (Co-CI-- 2 CIs in total). To Develop a Sustainable
-                    and Green Blockchain Consensus, $500,625,
-                    contract research. 2021-2022.
-                  </li>
-                  <li>
-                    (Co-CI-- 3 CIs in total). A trustworthy
-                    blockchain-based credentialing system, $50,000,
-                    contract research. 2021-2022.
+                    [2022-2027] Algorand Centre of
+                    Excellence. "Sustainability Informatics for the
+                    Pacific", A$8.68M. [Lead CI on the Research
+                    Cluster]
                   </li>
 
                   <li>
-                    (Co-CI-- 12 CIs in total). Automated tracking of
-                    construction materials for improved supply chain
-                    logistics and provenance – Phase 1 Scoping Study,
-                    $175, 000 from Building 4.0 CRC. 2021-2022.
+                    [2022-2024] ARC Discovery DP220101234. "Scalable &
+                    Accountable Privacy-Preserving Blockchain with
+                    Enhanced Security", A$330,000. [Co-CI]
                   </li>
 
                   <li>
-                    (Co-CI-- 3 CIs in total). Exploring
-                    blockchain-based approach for auditability in
-                    pharmaceutical supply chain, $75,000, contract
-                    research. 2021-2022.
+                    [2021-2023] ARC DECRA DE210100019. A Scalable and
+                    Adaptive-Resilient Blockchain, $563,000. [Sole CI]
                   </li>
-	          <li> (Co-CI -- 34 CIs in total). Reliable Affordable
-                  Clean Energy for 2030, $349,000,000, the 21st
-                  round of the Cooperative Research Centre (CRC)
-                  program. 2020-2031.
-                  </li>
+
                   <li>
-                    (Sole CI). Interoperability Across Distributed
-                    Ledgers, $57,397, gift research funding from
-                    IBM. 2020-2021.
+                    [2021-2022] Oceania Cyber Security
+                    Centre. "Scientific Support for Tuvalu’s National
+                    Digital Ledger Project", $14,967. [CI]
                   </li>
-                    <li>
-                      (Sole CI). Design space and pitfalls: blockchain
-                      interoperability, $298,371, contract
-                      research. 2020-2021.
-                    </li>
+
                   <li>
-                    (Co-CI-- 3 CIs in total). A consensus mechanism
-                    for blockchain in the Internet of Things,
-                    $131,586 from Data61, 11.2019-11.2022.
+                    [2021-2022] AgriFutures Australia. "Solutions and
+                    barriers in AgriFutures-levied small and emerging
+                    industries", $184,625.00. [CI]
                   </li>
+
                   <li>
-                    (Co-CI -- 3 CIs in total). Next-generation
-                    blockchains: decentralised data structures
-                    suitable for IoT devices, $131,586 from Data61,
-                    10.2019-10.2022.
+                    [2022–2022] Building 4.0 CRC. "Automated
+                    tracking of construction materials for improved
+                    supply chain logistics and provenance", $175,
+                    000. [CI]
                   </li>
+
+                  <li>
+                    [2021–2022] Industry Research Contract. "To
+                    Develop a Sustainable and Green Blockchain
+                    Consensus", $500,625. [CI]
+                  </li>
+
+                  <li>
+                    [2020-2030] Cooperative Research Centre (CRC)
+                    program, "Reliable Affordable Clean Energy for
+                    2030 (RACE for 2030)", $349M. [CI, Monash
+                    Champion]
+                  </li>
+
+                  <!-- <li> -->
+                  <!--   (Lead CI on Research Cluster) <b>Algorand Centre -->
+                  <!--   of Excellence</b> on Sustainability Informatics -->
+                  <!--   for the Pacific. $8.68M from Algorand Foundation, -->
+                  <!--   2022-2027. -->
+                  <!-- </li> -->
+                  <!-- <li> -->
+                  <!--   (Co-CI-- 4CIs in total). Scalable & Accountable -->
+                  <!--   Privacy-Preserving Blockchain with Enhanced -->
+                  <!--   Security. $330,000, Australian Research Council -->
+                  <!--   Discovery Project <b>(ARC DP)</b>, 2022-2024. -->
+                  <!-- </li> -->
+                  <!-- <li> -->
+                  <!--   (Co-CI-- 2 CIs in total). Identification, Key -->
+                  <!--   Management and Trust for Inverters for Distributed -->
+                  <!--   Energy Resources, $149, 000 from RACE for 2030 -->
+                  <!--   CRC, 2022. -->
+                  <!-- </li> -->
+                  <!-- <li> -->
+                  <!--   (Sole CI). A Scalable and Adaptive-Resilient -->
+                  <!--   Blockchain, $563,000, Australian Research Council -->
+                  <!--   Discovery Early Career Researcher Award <b>(ARC -->
+                  <!--   DECRA)</b>, 2021-2023. -->
+                  <!-- </li> -->
+                  <!-- <li>(Co-CI-- 4 CIs in total). De-tangling the -->
+                  <!-- blockchain: Solutions and barriers in -->
+                  <!-- AgriFutures-levied small and emerging industries, -->
+                  <!-- $184,625 from AgriFutures -->
+                  <!-- Australia. 2021-2022.</li> -->
+                  <!-- <li> -->
+                  <!--   (Co-CI-- 2 CIs in total). To Develop a Sustainable -->
+                  <!--   and Green Blockchain Consensus, $500,625, -->
+                  <!--   contract research. 2021-2022. -->
+                  <!-- </li> -->
+                  <!-- <li> -->
+                  <!--   (Co-CI-- 3 CIs in total). A trustworthy -->
+                  <!--   blockchain-based credentialing system, $50,000, -->
+                  <!--   contract research. 2021-2022. -->
+                  <!-- </li> -->
+
+                  <!-- <li> -->
+                  <!--   (Co-CI-- 12 CIs in total). Automated tracking of -->
+                  <!--   construction materials for improved supply chain -->
+                  <!--   logistics and provenance – Phase 1 Scoping Study, -->
+                  <!--   $175, 000 from Building 4.0 CRC. 2021-2022. -->
+                  <!-- </li> -->
+
+                  <!-- <li> -->
+                  <!--   (Co-CI-- 3 CIs in total). Exploring -->
+                  <!--   blockchain-based approach for auditability in -->
+                  <!--   pharmaceutical supply chain, $75,000, contract -->
+                  <!--   research. 2021-2022. -->
+                  <!-- </li> -->
+	          <!-- <li> (Co-CI -- 34 CIs in total). Reliable Affordable -->
+                  <!-- Clean Energy for 2030, $349,000,000, the 21st -->
+                  <!-- round of the Cooperative Research Centre (CRC) -->
+                  <!-- program. 2020-2031. -->
+                  <!-- </li> -->
+                  <!-- <li> -->
+                  <!--   (Sole CI). Interoperability Across Distributed -->
+                  <!--   Ledgers, $57,397, gift research funding from -->
+                  <!--   IBM. 2020-2021. -->
+                  <!-- </li> -->
+                  <!--   <li> -->
+                  <!--     (Sole CI). Design space and pitfalls: blockchain -->
+                  <!--     interoperability, $298,371, contract -->
+                  <!--     research. 2020-2021. -->
+                  <!--   </li> -->
+                  <!-- <li> -->
+                  <!--   (Co-CI-- 3 CIs in total). A consensus mechanism -->
+                  <!--   for blockchain in the Internet of Things, -->
+                  <!--   $131,586 from Data61, 11.2019-11.2022. -->
+                  <!-- </li> -->
+                  <!-- <li> -->
+                  <!--   (Co-CI -- 3 CIs in total). Next-generation -->
+                  <!--   blockchains: decentralised data structures -->
+                  <!--   suitable for IoT devices, $131,586 from Data61, -->
+                  <!--   10.2019-10.2022. -->
+                  <!-- </li> -->
                   <!-- <li> -->
                   <!--    (Co-CI -- four CIs in total). In search of -->
                   <!--   scalable consensus protocols for public -->
