--- a/index.html
+++ b/index.html
@@ -164,6 +164,11 @@ http://www.templatemo.com/tm-395-urbanic
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
                           <li>
+                          <li> <b> [2022-08]</b> Congrats Zoey Ziyi
+                            for receiving <b> Best Paper Award
+                            </b>
+                            at <b> Blockchain'22
+                            </b>!</li>
                             <b>[2022-08]</b>  Our Monash Blockchain Technology Centre
                             received US$6 Million award
                             for <a href="https://www.algorand.foundation/ace">
@@ -733,7 +738,17 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 The 29th IEEE International Conference
                                 on Software Analysis, Evolution and
                                 Reengineering (<b>SANER</b>)</i>,
-                                2022.</li>
+                                  2022.</li>
+
+                                <li> Ziyi Li, Joseph Liu, Jiangshan
+                                Yu, and Dragan Gasevic <br> <b>
+                                "Blockchain-Based Solutions for
+                                Education Credentialing System:
+                                Comparison and Implications for Future
+                                Development"</b> <b>(Best Paper
+                                Award)</b>, <br><b><i> IEEE
+                                Blockchain</i></b> 2022. </li>
+
                                 <li>Liang Yuan, Qiang He, Siyu Tan, Bo
                                 Li, Jiangshan Yu, Feifei Chen, Hai
                                 Jin, and Yun Yang. <br><b>"CoopEdge: A
