best paper award

--- a/index.html
+++ b/index.html
@@ -1253,11 +1253,14 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
               
 	      <li><b>Awards:</b><br>
 	        <ul type="circle">
+                  
                   <li> <b>Discovery Early Career Researcher Award
                   (DECRA)</b>, Australian Research Council (ARC),
-                    2021.
-                  <!-- <li><b>Best Paper Award</b> at <b> Blockchain'21. -->
-                  <!-- </b> </li> -->
+                  2021.</li>
+                  <li>
+                    <b>Best Paper Award</b> at Blockchain 2021 and
+                    Blockchain 2022.
+                  </li>
                   <li> <b>IBM Academic Award</b>, 2020. (Covered by <a href="https://www.monash.edu/it/about-us/news-and-events/latest/articles/2020/monash-blockchain-expert-awarded-prestigious-ibm-academic-award">Monash News</a> and <a href="https://cryptonews.com.au/monash-blockchain-expert-awarded-prestigious-ibm-academic-award">Crypto News</a>.)</li> 
                   <li> <b>Dean's Award for
                       Excellence in Research Impact
