--- a/index.html
+++ b/index.html
@@ -163,7 +163,9 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
-                          <li>
+                          <li> <b> [2022-10]</b> I'm delighted to
+                            serve as a PC member
+                            for <b>ICDCS'23</b>! </li>
                           <li> <b> [2022-08]</b> Congrats Zoey Ziyi
                             for receiving <b> Best Paper Award
                             </b>
@@ -1434,6 +1436,11 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 The 53rd Annual IEEE/IFIP
                                 International Conference on Dependable
                                 Systems and Networks <b>(DSN)</b>
+                              </li>
+                              <li>
+                                The 43rd IEEE International Conference
+                                on Distributed Computing
+                                Systems <b>(ICDCS)</b>
                               </li>
                             </ul>
                             <b>2022</b>
