--- a/index.html
+++ b/index.html
@@ -163,6 +163,10 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li> <b> [2022-11]</b> Our work on "TxAllo:
+                            Dynamic Transaction Allocation in Sharded
+                            Blockchain Systems” has been accepted
+                            by <b>ICDE’23</b>! Congrats Yuanzhe!</li>
                           <li> <b> [2022-11]</b> Our survey on Exotic
                           Signatures for Post-Quantum Blockchain has
                           been accepted for publication in <b>ACM
@@ -718,6 +722,15 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
 
 	                    <li><b>Conference:</b><br>
                               <ol type="1" start = "12">
+                                <li>
+                                  Yuanzhe Zhang, Shirui Pan, and
+                                  Jiangshan Yu.  <br><b>TxAllo:
+                                  Dynamic Transaction Allocation in
+                                  Sharded Blockchain
+                                  Systems</b>, <br><i>The 39th IEEE
+                                  International Conference on Data
+                                  Engineering (<b>ICDE</b>)</i>, 2023.
+                                </li>
                                 <li>
                                   Zhimei Sui, Joseph Liu, Jiangshan Yu
                                   and Xianrui Qin. <br><b>MoNet:
