--- a/index.html
+++ b/index.html
@@ -163,6 +163,10 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li><b> [2022-12]</b> Our work on "BlindHub:
+             Bitcoin-Compatible Privacy-Preserving Payment Channel
+             Hubs Supporting Variable Amounts" has been accepted for
+             publication at <b>IEEE S&P'23</b>!</li>
                           <li> <b> [2022-11]</b> Our work on "TxAllo:
                             Dynamic Transaction Allocation in Sharded
                             Blockchain Systems” has been accepted
@@ -722,6 +726,19 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
 
 	                    <li><b>Conference:</b><br>
                               <ol type="1" start = "12">
+                                <li>
+                                  Xianrui Qin, Shimin Pan, Arash
+                                  Mirzaei, Zhimei Sui, Oguzhan Ersoy,
+                                  Amin Sakzad, Jiangshan Yu, Muhammed
+                                  Esgin, Joseph Liu, and Tsz
+                                  Yuen. <br><b>BlindHub:
+                                  Bitcoin-Compatible
+                                  Privacy-Preserving Payment Channel
+                                  Hubs Supporting Variable
+                                  Amounts"</b>", <br><i>The 44th IEEE
+                                  Symposium on Security and Privacy
+                                    (<b>IEEE S&P</b>)</i>, 2023.
+                                </li>
                                 <li>
                                   Yuanzhe Zhang, Shirui Pan, and
                                   Jiangshan Yu.  <br><b>TxAllo:
