best paper at nss

--- a/index.html
+++ b/index.html
@@ -167,6 +167,9 @@ http://www.templatemo.com/tm-395-urbanic
              Bitcoin-Compatible Privacy-Preserving Payment Channel
              Hubs Supporting Variable Amounts" has been accepted for
              publication at <b>IEEE S&P'23</b>!</li>
+                          <li><b> [2022-12]</b> Our work on blockchain
+                            for education received <b>best paper
+                              award</b> at <b>NSS'22</b>. Congrats Zoey!</li>
                           <li> <b> [2022-11]</b> Our work on "TxAllo:
                             Dynamic Transaction Allocation in Sharded
                             Blockchain Systems” has been accepted
@@ -799,6 +802,17 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 Award)</b>, <br><b><i> IEEE
                                 Blockchain</i></b> 2022. </li>
 
+                                <li> Ziyi Li, Joseph Liu, Jiangshan
+                                Yu, Dragan Gasevic, Wayne
+                                Yang. <br><b> "CVallet: a
+                                Blockchain-oriented Application
+                                Development for Education and
+                                Recruitment",</b> <b>(Best Paper
+                                Award)</b>, <br><b><i> 16th
+                                International Conference on Network
+                                and System Security (NSS)</i></b>,
+                                  2022.</li>
+
                                 <li>Liang Yuan, Qiang He, Siyu Tan, Bo
                                 Li, Jiangshan Yu, Feifei Chen, Hai
                                 Jin, and Yun Yang. <br><b>"CoopEdge: A
@@ -1303,7 +1317,9 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
               
 	      <li><b>Awards:</b><br>
 	        <ul type="circle">
-                  
+                  <li>
+                    <b>Best Paper Award</b> at NSS 2022.
+                  </li>
                   <li> <b>Discovery Early Career Researcher Award
                   (DECRA)</b>, Australian Research Council (ARC),
                   2021.</li>
