--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                   Xianrui Qin, Shimin Pan, Arash
                                   Mirzaei, Zhimei Sui, Oguzhan Ersoy,
                                   Amin Sakzad, Jiangshan Yu, Muhammed
-                                  Esgin, Joseph Liu, and Tsz
+                                  Esgin, Joseph Liu, and Tsz Hon
                                   Yuen. <br><b>BlindHub:
                                   Bitcoin-Compatible
                                   Privacy-Preserving Payment Channel
